Current (trunk)
	- Improve Bootstrap theme with glyphicons
	- You can choose a "FLAVOR" for your theme in order to change colors
	- Add new commands: 'help' and 'list' that give all available commands
	- Add new commands: 'createpost' and 'add' in order to create a new post

Version 0.2 (released 2013-04-17)
	- Add jskomment as optional comment system
	- Permit to customize jskomment comment system content
	- Permit to choose for each theme an optional CSS color file. This permit to
	  have a CSS to place all elements, then another one to adapt colors.
	- Check variable to be unique in templates
	- Update documentation
	- Statuses from identica
	- Introduction: permit a user to add an introduction to its website
	- Kind of conclusion/credits/licence: permit a user to add a footer to its
	website with all text it wants. Example: add credits to its website
	- Only publish posts with a timestamp inferior to current's one (permit to
	create posts ahead of current datetime)
	- Permit user to choose a compression tool and a compression extension for
	backups
	- Also backup theme choosen by the user in the makefly.rc file
	- Fix bug on carriage return
	- Some minisch theme improvements
	- Documentation appearance improvements
	- Update translation
	- New theme: Responsive
	- Add "generator" meta tag to all templates
	- New theme: Base
	- Theme generation by using "Base" theme to generate one.
	- Possibility to create its own theme with a command like `pmake theme
	name='myThem'`
	- New theme: Bootstrap

Version 0.1.1 (release 2013-01-17)
	- Permit user to choose page ' suffix
	- Permit user to choose index filenames
	- Complete README file
	- Some HTML5 improvements
	- Fix but when reusing pmake without pmake clean
	- Add a "About"'s page
	- Add some missing variables in documentation
	- Complete documentation for installation via current version or developement
	  version. More information for dependancies installation.