@@ -4,7 +4,7 @@ BLOG_DESCRIPTION = Makefly is a makefile static weblog engine
 BLOG_LANG = en
 BLOG_CHARSET = UTF-8
 BASE_URL = http://localhost/~${USER}
-INSTALLDIR = /home/olivier/public_html
+INSTALLDIR = /home/${USER}/public_html
 RSS_FEED_NAME = Makefly RSS feed
 MAX_POST = 2
 DATE_FORMAT = %Y-%m-%d at %H:%M
